--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <tr>
         <td>
           <img
-            src="images/IMG_20220911_162353.jpg"
+            src="IMG_20220911_162353.jpg"
             alt="profile picture of rohit"
             width="200"
             height="300"
